style/style.css
:root {
    --primary-colour:#FFFFFF;
    --secondary-colour:#000000;
    --accent-pink:#FF4A71;
    --accent-purple:#FF30E3;
}

body{
    font-family: 'Quicksand', sans-serif;
    overflow-x: hidden;
    background-color: #fcfcfc;
}

h1{
    font-size: 40px;
    font-weight: bold;
}

h2{
    font-size: 27px;
    font-weight: bold;
}

p{
    font-size: 1em;
}

/* Button */
button:hover {
    transform: translateY(-3px);
    box-shadow: 0 10px 20px rgba(0, 0, 0, 0.2);
}

button:active {
    transform: translateY(-1px);
    box-shadow: 0 5px 10px rgba(0, 0, 0, 0.2);
}

button{
    background-color: var(--primary-colour);
    color: var(--secondary-colour);
}

button::after {
    content: "";
    display: inline-block;
    height: 100%;
    width: 100%;
    border-radius: 100px;
    position: absolute;
    top: 0;
    left: 0;
    z-index: -1;
    transition: all 0.4s;
}

button::after {
    background-color: var(--primary-colour);
}

button:hover::after {
    transform: scaleX(1.4) scaleY(1.6);
    opacity: 0;
}

/* section seperation */
section{
    height: 6em;
}

.container{
    padding: 0 10em;
}

/* Animated Logo */
.animated_logo{
    text-align: center;
}

/* Footer */
footer ul {
    padding-left: 6rem;
}

.footer{
    width: 100%;
    padding: 0.7em 0 0.1em 0;
    background-color: var(--secondary-colour);
    color: var(--primary-colour);
}

.footer p{
    text-align: center;
}

.row{
    margin-top: 2em;
    margin-bottom: 3em;
}

.about,
.support,
.company{
    padding-left: 1em;
}

.about ul,
.support ul,
.company ul{
    list-style-type: none;
}

footer a{
    color: var(--primary-colour);
}

/* Scroll Bar */
::-webkit-scrollbar {
    width: 15px;
}

::-webkit-scrollbar-thumb {
    border-radius: 100px;
    border: 5px solid transparent;
    background-clip: content-box;
    background-image: linear-gradient( var(--accent-pink), var(--accent-purple));
}
/***********************************************************************************************************************************************************************************/

/* Animated Scroll icon */
.scroll-down {
    position: absolute;
    top: 0;
    right: 0;
    bottom: 0;
    left: 0;
    margin: auto;
    margin-top: 53em;
    width :34px;
    height: 50px;
}

.mouse {
    width: 3px;
    padding: 10px 15px;
    height: 35px;
    border: 2px solid var(--secondary-colour);
    border-radius: 25px;
    opacity: 0.75;
    box-sizing: content-box;
    box-shadow: 5px 5px 10px rgba(0, 0, 0, 0.137);
}

.scroller {
    width: 3px;
    height: 10px;
    border-radius: 25%;
    background-color: var(--secondary-colour);
    animation-name: scroll;
    animation-duration: 2s;
    animation-timing-function: cubic-bezier(.15,.41,.69,.94);
    animation-iteration-count: infinite;
}

@keyframes scroll {
    0% { opacity: 0; }
    10% { transform: translateY(0); opacity: 1; }
    100% { transform: translateY(15px); opacity: 0;}
}

/* Header */
header{
    position: sticky;
    top: 0em;
    margin-bottom: 3em;
    z-index: 1;
}

.head{
    background-color: #fcfcfc;
    height:90px;
}

.logo{
    text-align: right;
}

.logo img{
    margin-top: 1.5em;
    margin-right: 18em;
    border-radius: 17px;
    box-shadow: 5px 5px 10px rgba(0, 0, 0, 0.137);
}

/* Navigation bar */
.topnav a{
    margin: 0 7px 0 7px;
    float: right;
    color: var(--secondary-colour);
    padding: 14px 16px;
    text-decoration: none;
}

.tabs{
    padding-top:1em;
}

/* Pledge card */
.card-div-test{
    height:2700px;
    position: absolute;
    margin-left: 2200px;
}

.card{
    width: 20em;
    float: right;
    margin-right:1.5em;
    position: sticky;
    top: 38rem;
    border-radius: 17px;
    margin-top: 59em;
    box-shadow: 5px 5px 10px rgba(0, 0, 0, 0.137);
    border: 0;
}

/* Card button */
.card-body button{
    text-transform: uppercase;
    text-decoration: none;
    padding: 15px 25px;
    display: inline-block;
    transition: all 0.2s;
    position: absolute;
    border-radius: 100px;
    border: 2px solid var(--accent-purple);
}

/* Card Progress bar */
.progress {
    background: #6e6e6e;
    justify-content: flex-start;
    border-radius: 100px;
    align-items: center;
    position: relative;
    display: flex;
    height: 1em;
    width:280px;
    margin-bottom: 20px;
}
  
.progress-value {
    animation: load 3s normal forwards;
    border-radius: 100px;
    background-image: linear-gradient(to right, var(--accent-pink), var(--accent-purple));
    height: 30px;
    width: 0;
}
  
@keyframes load {
    0% { width: 0; }
    100% { width: 79%; }
}

/* About Section */
.body-text{
    padding: 1.5em 1.5em;
}

.text{
    margin-bottom: 2em;
}

/* Video */
.video iframe{
    margin-top: 2em;
    width: 100%;
    aspect-ratio: 16 / 9; ;
    border-radius: 20px;
}

/* operationss */
.operations{
    padding: 0 4em;
}

.app iframe{
    margin-left: 30px;
    border-radius: 50px;
    box-shadow: 5px 5px 10px rgba(0, 0, 0, 0.137);
}

/* end back us button */
.end-back-btn{
    text-align: center;
}

.end-back-btn button{
    text-transform: uppercase;
    text-decoration: none;
    padding: 15px 25px;
    display: inline-block;
    transition: all 0.2s;
    position: relative;
    border-radius: 100px;
    border: 2px solid var(--accent-purple);
    margin: 2em 0 1.5em 0;
}

